@@ -1,11 +1,11 @@
 package com.sparrowwallet.sparrow.control;
 
-import com.github.sarxos.webcam.*;
 import com.google.zxing.*;
 import com.google.zxing.client.j2se.BufferedImageLuminanceSource;
 import com.google.zxing.common.HybridBinarizer;
 import com.google.zxing.qrcode.QRCodeReader;
 import com.sparrowwallet.bokmakierie.Bokmakierie;
+import com.sparrowwallet.drongo.OsType;
 import com.sparrowwallet.sparrow.io.Config;
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.ObjectProperty;
@@ -16,6 +16,8 @@ import javafx.concurrent.Task;
 import javafx.embed.swing.SwingFXUtils;
 import javafx.scene.image.Image;
 import net.sourceforge.zbar.ZBar;
+import org.openpnp.capture.*;
+import org.openpnp.capture.library.OpenpnpCaptureLibrary;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -23,38 +25,76 @@ import java.awt.*;
 import java.awt.geom.RoundRectangle2D;
 import java.awt.image.BufferedImage;
 import java.awt.image.WritableRaster;
-import java.util.Arrays;
+import java.util.*;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class WebcamService extends ScheduledService<Image> {
     private static final Logger log = LoggerFactory.getLogger(WebcamService.class);
 
+    private List<CaptureDevice> devices;
+    private Set<WebcamResolution> resolutions;
+
     private WebcamResolution resolution;
-    private WebcamDevice device;
-    private final WebcamListener listener;
-    private final WebcamUpdater.DelayCalculator delayCalculator;
+    private CaptureDevice device;
     private final BooleanProperty opening = new SimpleBooleanProperty(false);
+    private final BooleanProperty closed = new SimpleBooleanProperty(false);
 
     private final ObjectProperty<Result> resultProperty = new SimpleObjectProperty<>(null);
 
     private static final int QR_SAMPLE_PERIOD_MILLIS = 200;
 
-    private Webcam cam;
+    private final OpenPnpCapture capture;
+    private CaptureStream stream;
+    private PropertyLimits zoomLimits;
     private long lastQrSampleTime;
     private final Reader qrReader;
     private final Bokmakierie bokmakierie;
 
     static {
-        Webcam.setDriver(new WebcamScanDriver());
+        if(log.isTraceEnabled()) {
+            OpenpnpCaptureLibrary.INSTANCE.Cap_setLogLevel(8);
+        } else if(log.isDebugEnabled()) {
+            OpenpnpCaptureLibrary.INSTANCE.Cap_setLogLevel(7);
+        } else if(log.isInfoEnabled()) {
+            OpenpnpCaptureLibrary.INSTANCE.Cap_setLogLevel(6);
+        }
+
+        OpenpnpCaptureLibrary.INSTANCE.Cap_installCustomLogFunction((level, ptr) -> {
+            switch(level) {
+                case 0:
+                case 1:
+                case 2:
+                case 3:
+                    String err = ptr.getString(0).trim();
+                    if(err.equals("tjDecompressHeader2 failed: No error") || err.matches("getPropertyLimits.*failed on.*")) { //Safe to ignore
+                        log.debug(err);
+                    } else {
+                        log.error(err);
+                    }
+                    break;
+                case 4:
+                case 5:
+                case 6:
+                    log.info(ptr.getString(0).trim());
+                    break;
+                case 7:
+                    log.debug(ptr.getString(0).trim());
+                    break;
+                case 8:
+                default:
+                    log.trace(ptr.getString(0).trim());
+                    break;
+            }
+        });
     }
 
-    public WebcamService(WebcamResolution resolution, WebcamDevice device, WebcamListener listener, WebcamUpdater.DelayCalculator delayCalculator) {
-        this.resolution = resolution;
-        this.device = device;
-        this.listener = listener;
-        this.delayCalculator = delayCalculator;
+    public WebcamService(WebcamResolution requestedResolution, CaptureDevice requestedDevice) {
+        this.capture = new OpenPnpCapture();
+        this.resolution = requestedResolution;
+        this.device = requestedDevice;
         this.lastQrSampleTime = System.currentTimeMillis();
         this.qrReader = new QRCodeReader();
         this.bokmakierie = new Bokmakierie();
@@ -62,50 +102,84 @@ public class WebcamService extends ScheduledService<Image> {
 
     @Override
     public Task<Image> createTask() {
-        return new Task<Image>() {
+        return new Task<>() {
             @Override
             protected Image call() throws Exception {
                 try {
-                    if(cam == null) {
-                        List<Webcam> webcams = Webcam.getWebcams(1, TimeUnit.MINUTES);
-                        if(webcams.isEmpty()) {
-                            throw new UnsupportedOperationException("No camera available.");
+                    if(stream == null) {
+                        devices = capture.getDevices();
+
+                        if(devices.isEmpty()) {
+                            throw new UnsupportedOperationException("No cameras available");
                         }
 
-                        cam = webcams.get(0);
+                        CaptureDevice selectedDevice = devices.stream().filter(d -> !d.getFormats().isEmpty()).findFirst().orElse(devices.getFirst());
 
                         if(device != null) {
-                            for(Webcam webcam : webcams) {
-                                if(webcam.getDevice().getName().equals(device.getName())) {
-                                    cam = webcam;
+                            for(CaptureDevice webcam : devices) {
+                                if(webcam.getName().equals(device.getName())) {
+                                    selectedDevice = webcam;
                                 }
                             }
                         } else if(Config.get().getWebcamDevice() != null) {
-                            for(Webcam webcam : webcams) {
-                                if(webcam.getDevice().getName().equals(Config.get().getWebcamDevice())) {
-                                    cam = webcam;
+                            for(CaptureDevice webcam : devices) {
+                                if(webcam.getName().equals(Config.get().getWebcamDevice())) {
+                                    selectedDevice = webcam;
                                 }
                             }
                         }
 
-                        device = cam.getDevice();
+                        device = selectedDevice;
 
-                        cam.setCustomViewSizes(resolution.getSize());
-                        cam.setViewSize(resolution.getSize());
-                        if(!Arrays.asList(cam.getWebcamListeners()).contains(listener)) {
-                            cam.addWebcamListener(listener);
+                        if(device.getFormats().isEmpty()) {
+                            throw new UnsupportedOperationException("No resolutions supported by camera " + device.getName());
+                        }
+
+                        List<CaptureFormat> deviceFormats = new ArrayList<>(device.getFormats());
+
+                        //On *nix prioritise supported camera pixel formats, preferring RGB3, then YUYV, then MJPG
+                        //On macOS and Windows, camera pixel format is largely abstracted away
+                        if(OsType.getCurrent() == OsType.UNIX) {
+                            deviceFormats.sort((f1, f2) -> {
+                                WebcamPixelFormat pf1 = WebcamPixelFormat.fromFourCC(f1.getFormatInfo().fourcc);
+                                WebcamPixelFormat pf2 = WebcamPixelFormat.fromFourCC(f2.getFormatInfo().fourcc);
+                                return Integer.compare(WebcamPixelFormat.getPriority(pf1), WebcamPixelFormat.getPriority(pf2));
+                            });
+                        }
+
+                        Map<WebcamResolution, CaptureFormat> supportedResolutions = deviceFormats.stream()
+                                .filter(f -> WebcamResolution.from(f) != null)
+                                .collect(Collectors.toMap(WebcamResolution::from, Function.identity(), (u, v) -> u, TreeMap::new));
+                        resolutions = supportedResolutions.keySet();
+
+                        CaptureFormat format = supportedResolutions.get(resolution);
+                        if(format == null) {
+                            if(!supportedResolutions.isEmpty()) {
+                                resolution = getNearestEnum(resolution, supportedResolutions.keySet().toArray(new WebcamResolution[0]));
+                                format = supportedResolutions.get(resolution);
+                            } else {
+                                format = device.getFormats().getFirst();
+                                log.warn("Could not get standard capture resolution, using " + format.getFormatInfo().width + "x" + format.getFormatInfo().height);
+                            }
+                        }
+
+                        if(log.isDebugEnabled()) {
+                            log.debug("Opening capture stream  on " + device + " with format " + format.getFormatInfo().width + "x" + format.getFormatInfo().height + " (" + WebcamPixelFormat.fourCCToString(format.getFormatInfo().fourcc) + ")");
                         }
 
                         opening.set(true);
-                        cam.open(true, delayCalculator);
+                        stream = device.openStream(format);
                         opening.set(false);
+                        closed.set(false);
+
+                        try {
+                            zoomLimits = stream.getPropertyLimits(CaptureProperty.Zoom);
+                        } catch(Throwable e) {
+                            log.debug("Error getting zoom limits on " + device + ", assuming no zoom function");
+                        }
                     }
 
-                    BufferedImage originalImage = cam.getImage();
-                    if(originalImage == null) {
-                        return null;
-                    }
-
+                    BufferedImage originalImage = stream.capture();
                     CroppedDimension cropped = getCroppedDimension(originalImage);
                     BufferedImage croppedImage = originalImage.getSubimage(cropped.x, cropped.y, cropped.length, cropped.length);
                     BufferedImage framedImage = getFramedImage(originalImage, cropped);
@@ -128,17 +202,49 @@ public class WebcamService extends ScheduledService<Image> {
 
     @Override
     public void reset() {
-        cam = null;
+        stream = null;
+        zoomLimits = null;
         super.reset();
     }
 
     @Override
     public boolean cancel() {
-        if(cam != null && !cam.close()) {
-            cam.close();
+        if(stream != null) {
+            stream.close();
+            closed.set(true);
         }
 
         return super.cancel();
+    }
+
+    public void close() {
+        capture.close();
+    }
+
+    public PropertyLimits getZoomLimits() {
+        return zoomLimits;
+    }
+
+    public int getZoom() {
+        if(stream != null && zoomLimits != null) {
+            try {
+                return stream.getProperty(CaptureProperty.Zoom);
+            } catch(Exception e) {
+                log.error("Error getting zoom property on " + device, e);
+            }
+        }
+
+        return -1;
+    }
+
+    public void setZoom(int value) {
+        if(stream != null && zoomLimits != null) {
+            try {
+                stream.setProperty(CaptureProperty.Zoom, value);
+            } catch(Exception e) {
+                log.error("Error setting zoom property on " + device, e);
+            }
+        }
     }
 
     private void readQR(BufferedImage wideImage, BufferedImage croppedImage) {
@@ -189,7 +295,7 @@ public class WebcamService extends ScheduledService<Image> {
         g2d.drawImage(image, 0, 0, null);
         float[] dash1 = {10.0f};
         g2d.setColor(Color.BLACK);
-        g2d.setStroke(new BasicStroke(resolution == WebcamResolution.HD ? 3.0f : 1.5f, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER, 10.0f, dash1, 0.0f));
+        g2d.setStroke(new BasicStroke(resolution.isWidescreenAspect() ? 3.0f : 1.5f, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER, 10.0f, dash1, 0.0f));
         g2d.draw(new RoundRectangle2D.Double(cropped.x, cropped.y, cropped.length, cropped.length, 10, 10));
         g2d.dispose();
         return clone;
@@ -226,6 +332,14 @@ public class WebcamService extends ScheduledService<Image> {
         }
     }
 
+    public List<CaptureDevice> getDevices() {
+        return devices;
+    }
+
+    public Set<WebcamResolution> getResolutions() {
+        return resolutions;
+    }
+
     public Result getResult() {
         return resultProperty.get();
     }
@@ -235,31 +349,46 @@ public class WebcamService extends ScheduledService<Image> {
     }
 
     public int getCamWidth() {
-        return resolution.getSize().width;
+        return resolution.getWidth();
     }
 
     public int getCamHeight() {
-        return resolution.getSize().height;
+        return resolution.getHeight();
+    }
+
+    public WebcamResolution getResolution() {
+        return resolution;
     }
 
     public void setResolution(WebcamResolution resolution) {
         this.resolution = resolution;
     }
 
-    public WebcamDevice getDevice() {
+    public CaptureDevice getDevice() {
         return device;
     }
 
-    public void setDevice(WebcamDevice device) {
+    public void setDevice(CaptureDevice device) {
         this.device = device;
-    }
-
-    public boolean isOpening() {
-        return opening.get();
     }
 
     public BooleanProperty openingProperty() {
         return opening;
+    }
+
+    public BooleanProperty closedProperty() {
+        return closed;
+    }
+
+    public static <T extends Enum<T>> T getNearestEnum(T target) {
+        return getNearestEnum(target, target.getDeclaringClass().getEnumConstants());
+    }
+
+    public static <T extends Enum<T>> T getNearestEnum(T target, T[] values) {
+        int ordinal = target.ordinal();
+        return Stream.concat(ordinal > 0 ? Stream.of(values[ordinal - 1]) : Stream.empty(), ordinal < values.length - 1 ? Stream.of(values[ordinal + 1]) : Stream.empty())
+                .findFirst()
+                .orElse(null);
     }
 
     private static class CroppedDimension {
